<resources>
    <string name="app_name">Coffee Seller</string>

    <string name="loc_needed">Enable Location to use the app.</string>
    <string name="error">Error loading the application</string>


    <string name="search">Search...</string>

    <string name="gps_network_not_enabled">Enable GPS location for the application to work</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>




    <string name="view_product">View Product</string>
    <string name="next_delivery">Next Delivery :</string>
    <string name="view_cart">View Cart</string>
    <string name="select_custom_date">Select custom Date</string>


    <string name="copyright">Copyright MANO @2017</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>

    <string name="userid">User ID</string>
    <string name="email">Email Adress</string>
    <string name="password">Password</string>
    <string name="confirmpwd">Confirm password</string>
    <string name="password_new">New Password</string>
    <string name="confirmpwd_new">Confirm new password</string>
    <string name="mobile">Contact</string>

    <string name="not_enuf_time">Not enough duration available</string>

    <string name="id_cannot_be_blank">User ID cannot be blank</string>
    <string name="email_username">Email Address</string>
    <string name="or_connect">or connect</string>

    <string name="difficulty_signin">Cannot access your acccount?</string>


    <string name="invalid_email">Email address is not valid</string>
    <string name="invalid_pwd">Password is not valied</string>
    <string name="invalid_cpwd">Password and Confirm password</string>
    <string name="invalid_mobile">Invalid phone number</string>
    <string name="invalid_username">Username is not valid</string>
    <string name="error_registration">Error in registration</string>
    <string name="error_login">Error in login</string>
    <string name="please_wait_before_registration">Please wait for sometimes</string>
    <string name="enter_pwd">Please enter your email id</string>
    <string name="username">Full Name</string>
    <string name="invalid_name">Name cannot be blank</string>

    <string name="account">Account</string>
    <string name="error_network">Error in processing</string>
    <string name="done">Done</string>

    <string-array name="menuitems">
        <item>Logout</item>
        <item>Language</item>
    </string-array>

    <string name="select_address">Select your address</string>

    <string name="place_picker_search_label">Search</string>
    <string name="place_picker_search_hint">Search place...</string>
    <string name="title_activity_recent_searches">Recent Searches</string>
    <string name="more_recent_history_text">MORE FROM RECENT HISTORY</string>


    <string name="menu_fav">Favorites</string>
    <string name="menu_offer">Offers</string>
    <string name="menu_stores">Stores</string>

    <string name="menu_language">Language</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share </string>
    <string name="menu_logout">Logout</string>
    <string name="menu_account">Account</string>
    <string name="menu_order">Orders</string>
    <string name="menu_branches">Branches</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_subcat">Sub Categories</string>
    <string name="menu_product">Products</string>
    <string name="menu_status">Status</string>
    <string name="menu_help">Help</string>
    <string name="menu_delivery">Delivery Cost</string>

    <string name="location">Location</string>
    <string name="save_locations">Save Location</string>

    <string name="are_you_sure">Are you sure ?</string>
    <string name="logout_from_app">Logout from the application ?</string>
    <string name="place_order_with_dl_del">Place order with selected delivery time and selected delivery location [LOCATION] ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_location">Change Delivery Location</string>

    <string name="error_placing_order">Error placing order</string>
    <string name="check_your_internet">Check your internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_loading_prev_locations">Error loading previous locations</string>
    <string name="select_new_location">Select new location</string>
    <string name="my_orders">My Orders</string>
    <string name="remind">Remind</string>

    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>


    <string name="invalid_name_ar">Invalid arabic name</string>
    <string name="invalid_phone_number">Invalid phone number</string>

    <string name="en_blank">English is blank</string>
    <string name="ar_blank">Arabic is blank</string>
    <string name="location_blank">Location is blank</string>
    <string name="save_category">Save Category</string>
    <string name="save_subcategory">Save Sub Category</string>
    <string name="image_blank">Image is blank</string>
    <string name="pick_image_intent_text">Select image</string>
    <string name="select_category">Select category</string>
    <string name="category_blank">Category Cannot be blank</string>
    <string name="choose_from_available">Choose from available</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="select_location">Select Location</string>
    <string name="price">Price</string>
    <string name="invalid_price">Invalid Price</string>
    <string name="save_product">Save Product</string>
    <string name="mark_moved">Delivered</string>

    <string name="name_en">Name english</string>
    <string name="name_ar">Name arabic</string>


    <string name="error_updating_profile">Error updating profile</string>
    <string name="name_blank">Name cannot be blank</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_min_char">Password should be minimum 6 characters</string>
    <string name="password_mismatch">Password and confirm password does not match</string>
    <string name="name">Name</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="phone">Phone Number (Optional)</string>
    <string name="oldPassword">Current Password</string>
    <string name="old_password_cannot_b_blank">Current password cannot be blank</string>
    <string name="error_in_data">Error retrieving data for the MANO :(</string>
    <string name="error_response">Unexpected response received</string>
    <string name="updated_success">Profile updated successfully</string>
    <string name="menu_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="upload_pic">Upload Pic</string>
    <string name="gross_total">Gross Total</string>
    <string name="deliverycost">Delivery Cost</string>
    <string name="net_total">Net Total</string>

    <string name="order_ordered_date">Ordered On</string>
    <string name="order_qty">Items Ordered</string>
    <string name="order_delivery_date">Delivery time</string>
    <string name="order_placed">Order placed</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_ready">Order ready</string>
    <string name="order_delivered">Order dispatched</string>
    <string name="order_closed">Order finished</string>
    <string name="order_cancelled">Order cancelled</string>
    <string name="order_return">Return Pending</string>

    <string name="available">Available</string>
    <string name="not_available">Offline</string>
    <string name="currency">SAR</string>
    <string name="cancel_order">Cancel order with this store ?</string>
    <string name="call_is_required_to_contact">Call can be required when you wish to call for order status</string>
    <string name="edit">Edit</string>
    <string name="view_orders">View Orders</string>
    <string name="set_status">--Set Status--</string>

    <string name="update_profile">Update Profile</string>


    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="ready">Ready</string>
    <string name="accepted">Accepted</string>
    <string name="dispatched">Dispatched</string>
    <string name="neworders">New</string>
    <string name="add_offer">Add Offer</string>
    <string name="text">Offer Text...</string>
    <string name="save">Save</string>
    <string name="text_blank">Offer text cannot be blank...</string>
    <string name="coverage">Radius ( in kilometers )</string>
    <string name="invalid_coverage_radius">Invalid coverage radius...</string>
    <string name="offer_price">Offer price</string>
    <string name="menu_delete">Delete this branch</string>
    <string name="signup_for_new">Signup for new account ?</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="location_name">Location Name</string>

    <string name="radius">Radius</string>
    <string name="delivery_location">Location </string>
    <string name="location_loading">Location is still loading</string>
    <string name="select_location_plz">Please select location first</string>



    <string name="delivery_guys">Delivery</string>
    <string name="total_orders">Total delivered</string>
    <string name="my_orders_carried">Total my orders delivered</string>
    <string name="total_pending">Total pending</string>
    <string name="my_orders_pending">Total my orders pending</string>
    <string name="distance_away">Distance from me</string>
    <string name="select_for_delivery">Select</string>
    <string name="myself">Delivery not needed</string>
    <string name="no_delivery_sure">Are you sure no delivery person is required to deliver ? This action cannot be reverted.</string>


    <string name="all_products">All Products</string>
    <string name="please_select_location_first">Please select location first</string>
    <string name="please_select_cat_first">Please select category first</string>
    <string name="minimum_del_cost">Minimum amount for delivery</string>

    <string name="create_new_acccount">Create new account ?</string>
    <string name="address_details">Address details</string>
    <string name="offer">Offer</string>

</resources>
