<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rltop"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/header"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true">

            <com.balram.library.FotTextView
                android:background="#0000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_title"
                android:singleLine="true"
                android:textColor="@color/title_color"
                app:customfont="Exo2-Regular.otf"
                android:layout_centerVertical="true"
                android:text="@string/menu_order"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/title_margin"
                android:textSize="@dimen/title_size"/>


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:tint="#fff"
                android:layout_marginRight="6dp"
                android:scaleType="centerInside"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/reload"
                android:id="@+id/refresh"/>



            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:id="@+id/menu_opener"
                android:onClick="toggleMenu"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/list_menu"/>


        </RelativeLayout>


        <HorizontalScrollView
            android:layout_below="@+id/rltop"
            android:id="@+id/rltop2"
            android:scrollbars="none"
            android:padding="5dp"
            android:background="#f3f3f3"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/neworders"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="0"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/neworders"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>

            <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/accepted"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="1"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/accepted"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>

            <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/ready"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="2"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/ready"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>


            <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/dispatched"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="3"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/dispatched"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>


                <com.balram.library.FotTextView
                    android:id="@+id/returns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_cat_unselected"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:tag="4"
                    android:text="Returns"
                    android:textColor="@color/orange"
                    android:textSize="12dp"
                    app:customfont="Exo2-Regular.otf" />

                <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/completed"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="5"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/completed"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>

            <com.balram.library.FotTextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/cancelled"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tag="6"
                android:background="@drawable/rounded_cat_unselected"
                android:text="@string/cancelled"
                android:textColor="@color/orange"
                app:customfont="Exo2-Regular.otf"
                android:textSize="12dp"/>


        </LinearLayout>
        </HorizontalScrollView>


        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltop2"
            android:padding="10dp"
            android:divider="#0000"
            android:dividerHeight="10dp"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

        <ListView
            android:id="@+id/listview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltop2"
            android:padding="10dp"
            android:divider="#0000"
            android:dividerHeight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loader"
            android:layout_centerInParent="true"
            android:layout_width="20dp"
            android:src="@drawable/loader_image_"
            android:layout_height="20dp"
            android:adjustViewBounds="true" />


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/left_drawer"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:choiceMode="singleChoice"
        android:background="@drawable/rounded_right">

        <include layout="@layout/menu_layout"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
