<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rltop"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/header"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true">

            <com.balram.library.FotTextView
                android:background="#0000"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_title"
                android:singleLine="true"
                android:textColor="@color/title_color"
                app:customfont="Exo2-Regular.otf"
                android:layout_centerVertical="true"
                android:text="@string/add_offer"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/title_margin"
                android:textSize="@dimen/title_size"/>





            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:id="@+id/menu_opener"
                android:onClick="toggleMenu"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/list_menu"/>



        </RelativeLayout>

        <Spinner
            android:layout_below="@+id/rltop"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="-10dp"
            android:id="@+id/spinner"/>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rltop"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">



                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:padding="10dp"
                    android:background="@drawable/rounded_translucent"
                    android:layout_width="match_parent">



                    <com.balram.library.FotEditText
                        android:background="@drawable/profile_bottom_border"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="left|top"
                        android:hint="@string/text"
                        android:id="@+id/text"
                        android:textCursorDrawable="@null"
                        android:textColorHint="@color/profile_hint"
                        android:textColor="@color/profile_txt"
                        app:customfont="Exo2-Regular.otf"
                        android:layout_marginTop="8dp"
                        android:textSize="@dimen/profile_txt"/>




                    <com.balram.library.FotButton
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:id="@+id/commit"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/save"
                        android:layout_margin="4dp"
                        android:textColor="#fff"
                        android:background="@drawable/profile_button"
                        app:customfont="Exo2-Bold.otf"
                        android:onClick="saveData"
                        android:textSize="@dimen/profile_txt"/>


                    <LinearLayout
                        android:id="@+id/oring"
                        android:visibility="gone"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ccc"
                            android:layout_marginBottom="30dp"/>



                        <com.balram.library.FotButton
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:id="@+id/chooseFromAvailable"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/choose_from_available"
                            android:layout_margin="4dp"
                            android:textColor="#fff"
                            android:background="@drawable/profile_button"
                            app:customfont="Exo2-Bold.otf"
                            android:onClick="getCurrent"
                            android:textSize="@dimen/profile_txt"/>
                    </LinearLayout>
                </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/left_drawer"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:choiceMode="singleChoice"
        android:background="@drawable/rounded_right">

        <include layout="@layout/menu_layout"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
